# cybulde-model-training

./: .gitignore  Makefile  README.md  docker-compose.yaml  entrypoint.py  pyproject.toml
.envs/: .mlflow-dev  .mlflow-prod
cybulde/: entrypoint.py
cybulde/config_schemas/: config_schema.py
cybulde/config_schemas/infrastructure/: .instance_template_creator_schema.py.swp  infrastructure_schema.py  instance_group_creator_schema.py  instance_template_creator_schema.py
cybulde/infrastructure/: instance_group_creator.py  instance_template_creator.py
cybulde/utils/: config_utils.py  gcp_utils.py  mlflow_utils.py  torch_utils.py
docker/: Dockerfile
docker_local/: Dockerfile  pyproject.toml
outputs/2024-07-22/13-49-18/.hydra/: hydra.yaml
scripts/vm_startup/: task_runner.sh
