[tool.poetry]
name = "local-mlflow-server"
version = "0.1.0"
description = "local mlflow server"
authors = ["abhipreets2 <abhipreets2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "==2.5.0"
psycopg2-binary = "~=2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
